[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/sxgd/nodes/debug/SxLogPanel/SxLogPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/sxgd/nodes/debug/SxDebugInfo/SxDebugInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/sxgd/nodes/debug/SxDebugPanel/SxDebugPanel.gd" type="Script" id=3]
[ext_resource path="res://addons/sxgd/assets/fonts/OfficeCodePro-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/sxgd/assets/fonts/OfficeCodePro-Bold.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="SxDebugPanel" type="CanvasLayer"]
layer = 4
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SxDebugInfo" parent="Panel" instance=ExtResource( 2 )]

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Container" type="Control" parent="Panel/HBoxContainer"]
margin_right = 682.0
margin_bottom = 480.0
size_flags_horizontal = 3

[node name="SxLogPanel" parent="Panel/HBoxContainer/Container" instance=ExtResource( 1 )]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_left = 686.0
margin_right = 832.0
margin_bottom = 480.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Title" type="Label" parent="Panel/HBoxContainer/MarginContainer"]
margin_left = 26.0
margin_top = 10.0
margin_right = 136.0
margin_bottom = 31.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Debug Panel"

[node name="Label" type="Label" parent="Panel/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 416.0
margin_right = 136.0
margin_bottom = 470.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = SubResource( 1 )
text = "F10 - Show logs
F11 - Show stats
F12 - Toggle panel"
